--- a/local/domains/templates/index.mustache
+++ b/local/domains/templates/index.mustache
@@ -40,7 +40,7 @@
                     <td>{{timecreated}}</td>
                     <td>
                         <a href="{{action_url}}?domainid={{id}}&action=delete" class="delete-item-link" id="delete_domain_button"></a>
-                        <a href="{{action_url}}?domainid={{id}}&action=verify" class="verify-item-link" id="verify_domain_button"></a>
+                        <a href="{{action_url}}?domainid={{id}}&action=verify" class="verify-item-link" id="verify_domain_button">Verify</a>
                     </td>
                 </tr>
             {{/active_domains_list}}
