--- a/local/users/templates/index.mustache
+++ b/local/users/templates/index.mustache
@@ -47,18 +47,18 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>User's Email</p>
-                <label for="new_user_email_input">
-                    <input name="new_user_email_input" type="text" placeholder="example@email.com" />
-                </label>
-
+                {{{new_user_form}}}
+<!--                <p class="new-user-email-label">User's Email</p>-->
+<!--                <label for="new_user_email_input">-->
+<!--                    <input class="new-user-email-input" name="new_user_email_input" type="text" placeholder="example@email.com" />-->
+<!--                </label>-->
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                    Cancel
-                </button>
-            </div>
+<!--            <div class="modal-footer">-->
+<!--                <button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>-->
+<!--                <button type="button" class="btn btn-secondary" data-dismiss="modal">-->
+<!--                    Cancel-->
+<!--                </button>-->
+<!--            </div>-->
         </div>
     </div>
 </div>
