[ local/users ] 1. bring new users upload page

--- a/local/users/templates/index.mustache
+++ b/local/users/templates/index.mustache
@@ -10,9 +10,10 @@
                     data-toggle="modal"
                     data-target="#page_modal_container">Add New User
             </button>
-            <button class="upload-user-file-button btn btn-info">
+            <a href="{{upload_users_url}}"
+               class="upload-user-file-button btn btn-info">
                 Upload Users via Text File
-            </button>
+            </a>
         </div>
     </div>
     <div class="users-list-container">
