[ local/users ] 1. save for now,

--- a/local/users/templates/index.mustache
+++ b/local/users/templates/index.mustache
@@ -26,7 +26,7 @@
             </tr>
             {{#all_users_list}}
                 <tr>
-                    <td><a href="#">{{firstname}}</a></td>
+                    <td>{{firstname}}</td>
                     <td>{{lastname}}</td>
                     <td>{{email}}</td>
                     <td>{{lastaccess}}</td>
