--- a/local/domains/scss/styles.scss
+++ b/local/domains/scss/styles.scss
@@ -26,19 +26,23 @@
             font-size: 14px;
             line-height: 120%;
             color: rgba(0, 0, 0, 0.6);
-            margin: 12px 0;
+            margin-top: 12px;
         }
     }
 
-    .add-token-notice-text {
+    .domain-notification-text, .subdomain-notification-text {
         display: inline-block;
-        background: #FFFFFF;
-        border: 1px solid #F5222D;
+        max-width: 60%;
         box-sizing: border-box;
         box-shadow: 0 2px 8px rgb(0 0 0 / 15%);
+        border: 1px solid #FFE58F;
         border-radius: 2px;
-        background: url("../img/orange-exclamation-icon.png") no-repeat no-repeat left;
+        background-color: #FFFBE6;
+        background-image: url("../img/orange-exclamation-icon.png");
+        background-repeat: no-repeat;
+        background-position-y: center;
         background-position-x: 17px;
+        background-size: 14px 14px;
         margin: 0 15px 15px 15px;
         padding: 10px 10px 10px 40px;
         font-style: normal;
@@ -46,10 +50,23 @@
         font-size: 14px;
         line-height: 22px;
         color: rgba(0, 0, 0, 0.85);
+
+
+        &.error {
+            background-image: url("../img/red-failed-icon.png");
+            background-color: #FFF1F0;
+            border: 1px solid #FFCCC7;
+        }
+
+        &.success {
+            background-image: url("../img/green-checkmark-icon.png");
+            background-color: #F6FFED;
+            border: 1px solid #B7EB8F;
+        }
     }
 
     .create-domain-form-container form.mform {
-        padding: 15px;
+        padding: 0 15px 15px 15px;
 
         .form-group.row {
             margin: 0;
@@ -84,23 +101,22 @@
                 }
 
                 select#id_domainid {
-                    //width: 103px;
                     height: 40px;
                     left: 242px;
                     top: 0;
-                    background: #EFEFEF;
+                    background-image: url("../img/down-arrow.png");
+                    background-color: #FFFFFF;
                     font-size: 16px;
                     font-style: normal;
                     font-weight: normal;
                     line-height: 24px;
                     color: #000;
-                    border: none;
+                    border: 1px solid #D9D9D9;
                     cursor: pointer;
                     transition: 1s;
 
                     &:hover {
-                        background: rgb(119, 119, 119);
-                        color: #fff;
+                        background-color: #D9D9D9;
                     }
                 }
 
@@ -218,7 +234,13 @@
                     box-sizing: border-box;
                     border-radius: 2px;
                     padding: 5px 10px;
-                    margin-left: 10px;
+                    margin-right: 10px;
+
+                    &.disabled-link {
+                        cursor: not-allowed;
+                        opacity: 0.5;
+                        text-decoration: none;
+                    }
                 }
             }
         }
