--- a/local/domains/scss/styles.scss
+++ b/local/domains/scss/styles.scss
@@ -65,73 +65,75 @@
         }
     }
 
-    .create-domain-form-container form.mform {
-        padding: 0 15px 15px 15px;
+    .create-domain-form-container, .create-subdomain-form-container {
+        form.mform {
+            padding: 0 15px 15px 15px;
 
-        .form-group.row {
-            margin: 0;
-            display: inline-block;
+            .form-group.row {
+                margin: 0;
+                display: inline-block;
 
-            .col-form-label {
-                display: none !important;
-            }
-
-            .form-inline {
-                padding: 0;
-                //display: inline-block;
-                max-width: 100%;
-
-                input.form-control {
-                    background: url("../img/earth-icon.png") no-repeat no-repeat left;
-                    background-position-x: 12px;
-                    padding-left: 35px;
-                    width: 345px;
-                    height: 40px;
-                    border: 1px solid #D9D9D9;
-                    box-sizing: border-box;
-                    border-radius: 2px 0 0 2px;
-                    font-style: normal;
-                    font-weight: normal;
-                    font-size: 16px;
-                    line-height: 24px;
-
-                    &#subdomain_name_input {
-                        width: 242px;
-                    }
+                .col-form-label {
+                    display: none !important;
                 }
 
-                select#id_domainid {
-                    height: 40px;
-                    left: 242px;
-                    top: 0;
-                    background-image: url("../img/down-arrow.png");
-                    background-color: #FFFFFF;
-                    font-size: 16px;
-                    font-style: normal;
-                    font-weight: normal;
-                    line-height: 24px;
-                    color: #000;
-                    border: 1px solid #D9D9D9;
-                    cursor: pointer;
-                    transition: 1s;
+                .form-inline {
+                    padding: 0;
+                    //display: inline-block;
+                    max-width: 100%;
 
-                    &:hover {
-                        background-color: #D9D9D9;
+                    input.form-control {
+                        background: url("../img/earth-icon.png") no-repeat no-repeat left;
+                        background-position-x: 12px;
+                        padding-left: 35px;
+                        width: 345px;
+                        height: 40px;
+                        border: 1px solid #D9D9D9;
+                        box-sizing: border-box;
+                        border-radius: 2px 0 0 2px;
+                        font-style: normal;
+                        font-weight: normal;
+                        font-size: 16px;
+                        line-height: 24px;
+
+                        &#subdomain_name_input {
+                            width: 242px;
+                        }
                     }
-                }
 
-                input.btn.btn-primary {
-                    padding: 0 16px;
-                    height: 40px;
-                    /* Daybreak Blue / 6 */
-                    background: #1890FF;
-                    /* Daybreak Blue / 6 */
-                    border: 1px solid #1890FF;
-                    box-sizing: border-box;
-                    /* drop-shadow / button-primary */
-                    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.043);
-                    border-radius: 0 2px 2px 0;
+                    select#id_domainid {
+                        height: 40px;
+                        left: 242px;
+                        top: 0;
+                        background-image: url("../img/down-arrow.png");
+                        background-color: #FFFFFF;
+                        font-size: 16px;
+                        font-style: normal;
+                        font-weight: normal;
+                        line-height: 24px;
+                        color: #000;
+                        border: 1px solid #D9D9D9;
+                        cursor: pointer;
+                        transition: 1s;
 
+                        &:hover {
+                            background-color: #D9D9D9;
+                        }
+                    }
+
+                    input.btn.btn-primary {
+                        padding: 0 16px;
+                        height: 40px;
+                        /* Daybreak Blue / 6 */
+                        background: #1890FF;
+                        /* Daybreak Blue / 6 */
+                        border: 1px solid #1890FF;
+                        box-sizing: border-box;
+                        /* drop-shadow / button-primary */
+                        box-shadow: 0 2px 0 rgba(0, 0, 0, 0.043);
+                        border-radius: 0 2px 2px 0;
+
+                    }
                 }
             }
         }
