[ local/domains ] 1. styles update

--- a/local/domains/css/styles.css
+++ b/local/domains/css/styles.css
@@ -168,16 +168,19 @@
   background: #FF7875;
 }
 .table-container .domains-list-container .table.domains-list td .primary-domain-radio {
-  background: url("../img/primary-domain-radio.png") no-repeat no-repeat left;
+  background-image: url("../img/primary-domain-radio.png");
+  vertical-align: middle;
+  background-position-y: center;
+  background-repeat: no-repeat;
+  background-color: transparent;
   display: inline-block;
   width: 20px;
   height: 20px;
   cursor: pointer;
   border: none;
-  vertical-align: inherit;
 }
 .table-container .domains-list-container .table.domains-list td .primary-domain-radio.primary-domain-selected {
-  background: url("../img/primary-domain-selected.png") no-repeat no-repeat left;
+  background-image: url("../img/primary-domain-selected.png");
 }
 .table-container .domains-list-container .table.domains-list td .primary-domain-text {
   font-style: normal;
