--- a/local/domains/templates/index.mustache
+++ b/local/domains/templates/index.mustache
@@ -97,6 +97,7 @@
                                     data-target="#page_modal_container">
                             </button>
                             {{#primarydomain}}<span class="primary-domain-text">Primary domain</span>{{/primarydomain}}
+                            {{^primarydomain}}<span class="set-primary-domain-text">Set as primary</span>{{/primarydomain}}
                         {{/status}}
                     </td>
                     <td>{{cname}}</td>
