--- a/local/domains/templates/index.mustache
+++ b/local/domains/templates/index.mustache
@@ -13,7 +13,7 @@
     </div>
 
     <div class="domain-notification-text {{domain_notification_type}}">
-        {{domain_notification_text}}
+        {{{domain_notification_text}}}
     </div>
 
     <div class="domains-list-container">
@@ -63,7 +63,7 @@
     </div>
 
     <div class="subdomain-notification-text {{subdomain_notification_type}}">
-        {{subdomain_notification_text}}
+        {{{subdomain_notification_text}}}
     </div>
 
     <div class="domains-list-container">
