--- a/local/domains/scss/styles.scss
+++ b/local/domains/scss/styles.scss
@@ -51,6 +51,9 @@
         line-height: 22px;
         color: rgba(0, 0, 0, 0.85);
 
+        .highlight-in-notification {
+            text-decoration: underline;
+        }
 
         &.error {
             background-image: url("../img/red-failed-icon.png");
